--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-images": "^1.2.0-beta.7",
+    "react-pdf": "^5.3.2",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -33,8 +35,7 @@
   },
   "rules": {
     "no-unused-vars": "off"
-  }
-  ,
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -42,8 +43,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
       "last 1 firefox version",
+      "last 1 edge version",
+      "last 1 chrome version",
       "last 1 safari version"
     ]
   }
